# ew-workflows

./: .gitignore  README.md  pyproject.toml  scepter-quickstart.md
cesm2/download_scripts/.ipynb_checkpoints/: cesm2le_download-checkpoint.sh
cesm2/process/: create-single-ds.ipynb
data/: README.md  pyproject.toml
data/processing/: subset_era5_to_icechunk.py
inputs/scepter/batch/: RERUN_10__meanAnn_cc_shortRun_base_psdfull_hiFert_gs+apprate_v0.csv  RERUN_10__meanAnn_cc_shortRun_base_psdfull_lowFert_gs+apprate_v0.csv  RERUN_10__meanAnn_cc_shortRun_test_v1_hiFert_gs+apprate_v0.csv  RERUN_10__meanAnn_gbas_shortRun_test_v1_lowFert_gs+apprate_v0.csv  RERUN_11__meanAnn_cc_shortRun_base_psdfull_hiFert_gs+apprate_v0.csv  RERUN_11__meanAnn_cc_shortRun_base_psdfull_lowFert_gs+apprate_v0.csv  RERUN_11__meanAnn_cc_shortRun_test_v1_hiFert_gs+apprate_v0.csv  RERUN_12__meanAnn_cc_shortRun_base_psdfull_hiFert_gs+apprate_v0.csv  RERUN_12__meanAnn_cc_shortRun_base_psdfull_lowFert_gs+apprate_v0.csv  RERUN_12__meanAnn_cc_shortRun_test_v1_hiFert_gs+apprate_v0.csv  RERUN_13__meanAnn_cc_shortRun_base_psdfull_hiFert_gs+apprate_v0.csv  RERUN_13__meanAnn_cc_shortRun_base_psdfull_lowFert_gs+apprate_v0.csv  RERUN_14__meanAnn_cc_shortRun_base_psdfull_hiFert_gs+apprate_v0.csv  (+146 more)
run_scepter/: __init__.py  argo_helper_fxns.py  batch_helperFxns.py  build_composite_multiyear.py  cdr_fxns_flx.py  cdr_fxns_postproc.py  cflx_proc.py  sa_postproc_fxns.py  scepter_helperFxns.py
run_scepter/.ipynb_checkpoints/: argo_helper_fxns-checkpoint.py
tests/scepter/: psd_testing.ipynb
(+83 files in other folders)
