[project]
name = "data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.7.3",
    "coiled>=1.113.0",
    "dask>=2025.7.0",
    "distributed>=2025.7.0",
    "icechunk>=1.0.2",
    "jupyter>=1.1.1",
    "jupyter-server-proxy>=4.4.0",
    "obstore>=0.7.0",
    "pre-commit>=4.2.0",
    "xarray>=2025.7.1",
    "zarr>=3.1.0",
]
